添加论坛友情链接

--- a/论坛主体/论坛.html
+++ b/论坛主体/论坛.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+<div class="friend-links">
+
+  <h3>友情链接</h3>
+  <div class="friend-link-item">
+    <a href="#">链接1</a>
+  </div>
+  <div class="friend-link-item">
+    <a href="#">链接2</a>
+  </div>
+  <div class="friend-link-item">
+    <a href="#">链接3</a>
+  </div>
+</div>
   <title>NIHAO论坛</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
